envoy.yaml
static_resources:
  listeners:
    - address:
        socket_address:
          address: 0.0.0.0
          port_value: 9211
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                codec_type: AUTO
                stat_prefix: ingress_http
                access_log:
                  - name: envoy.access_loggers.stdout
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.access_loggers.stream.v3.StdoutAccessLog
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: service
                      domains:
                        - "*"
                      routes:
                        - match:
                            prefix: /
                          route:
                            cluster: local_service
                  request_headers_to_remove:
                    - "Authorization"
                http_filters:
                  - name: envoy.filters.http.jwt_authn
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.jwt_authn.v3.JwtAuthentication
                      providers:
                        provider1:
                          issuer: demo
                          local_jwks:
                            inline_string: "{\"keys\":[{\"use\": \"sig\",\"alg\": \"HS256\",\"kid\": \"test\",\"kty\": \"oct\",\"k\": \"bXktc2VjcmV0LWtleQo=\"}]}"
                          forward: true
                      rules:
                        - match:
                            prefix: /
                          requires:
                            provider_name: provider1
                  - name: envoy.filters.http.wasm
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.wasm.v3.Wasm
                      config:
                        name: "hello_wasm"
                        root_id: "my_root_id"
                        configuration:
                          "@type": "type.googleapis.com/google.protobuf.StringValue"
                          value: |
                            {
                              "claim": "sub",
                              "header": "X-WEBAUTH-USER"
                            }
                        vm_config:
                          runtime: "envoy.wasm.runtime.v8"
                          vm_id: "my_vm_id"
                          code:
                            local:
                              filename: "/etc/hello_wasm.wasm"
                          allow_precompiled: true
                  - name: envoy.filters.http.router
  clusters:
    - name: local_service
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: local_service
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: backend
                      port_value: 8080
layered_runtime:
  layers:
    - name: disk_layer_0
      disk_layer:
        symlink_root: /srv/runtime/current
        subdirectory: envoy
